@@ -37,6 +37,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #8275: Fix passing of callback arguments with ctypes under Win64.
+  Patch by Stan Mihai.
+
 - Issue #11053: Fix IDLE "Syntax Error" windows to behave as in 2.x,
   preventing a confusing hung appearance on OS X with the windows
   obscured.
